# unet

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  docs.yaml
cmake/: unetConfig.cmake.in
docs/: config.md  contributing.md  handler.md  index.md  installation.md  middlewares.md  mkdocs.yml  quick-start.md  request-response.md  roadmap.md
examples/: AdvancedClientExamples.cpp  DemoUventShowcase.cpp  ModernHttpClient.cpp  SimpleClient.cpp  SimpleServer.cpp
examples/upq_integration/: CMakeLists.txt  config.toml  main.cpp
include/Components/Compression/: CompressionBase.h
include/Components/Headers/: ETag.h
include/Modules/StreamHandlers/: OpenSSL.h
include/Protocols/HTTP/: Experimental.h  HTTP1.h  HeaderEnum.h  Headers.h  Message.h  RadixRouter.h  RouterCommon.h
include/client/: Client.h  HttpClient.h  StreamHandlers.h
include/server/: Acceptor.h  server.h
include/utils/: ParseError.h  header_utils.h  utils.h
include/utils/HTTPUtils/: HTTPUtils.h
new-include/unet/: header.hpp  http.hpp  mime.hpp
new-include/unet/Experimental/: Experimental.h
new-include/unet/core/: acceptor.hpp
new-include/unet/core/streams/: plaintext.hpp
new-include/unet/header/: enum.hpp  generic.hpp
new-include/unet/http/: error.hpp  header.hpp  message.hpp  middleware.hpp  parser.hpp  request.hpp  response.hpp  router.hpp  server.hpp  session.hpp
new-include/unet/http/parser/: error.hpp  http1.hpp
new-include/unet/http/router/: radix.hpp  regex.hpp  route.hpp
new-include/unet/http/v1/: request_parser.hpp  response_serializer.hpp  server_session.hpp
new-include/unet/http/version/: http1.hpp
new-include/unet/mime/multipart/: form_data.hpp
new-include/unet/mime/multipart/form_data/: generic.hpp
new-include/unet/uri/: uri.hpp
new-include/unet/utils/: error.hpp  size_literals.hpp
new-src/http/: middleware.cpp
new-src/http/parser/: http1.cpp
new-src/http/router/: radix.cpp  route.cpp
new-src/http/v1/: request_parser.cpp
new-src/mime/form_data/: generic.cpp
new-test/: CMakeLists.txt  test_form_data.cpp
new-tests/: CMakeLists.txt  test_http1_parser.cpp  test_http_server.cpp
server/: CMakeLists.txt  main.cpp
server/server/data/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  types.h
server/server/handler/: BasicEndpointHandler.cpp  BasicEndpointHandler.h  EndpointHandler.h  HandlerModule.h  Server.cpp  Server.h
server/server/http1/: StatusCodeHandler.cpp  StatusCodeHandler.h  http1.cpp  http1.h
server/server/loop/: loop.cpp  loop.h
server/utils/: globals.cpp  globals.h
server/utils/configuration/: ConfigReader.cpp  ConfigReader.h
server/utils/logging/: logger.h
server/utils/parser/: Http1Parser.cpp  Http1Parser.h
server/utils/request/: requestTypeStr.cpp
server/utils/socket/: socket.cpp  socket.h
server/utils/ssl/: CTX_util.h
server_config/: config.toml  redirectConfig.toml
src/Components/DataTypes/Multipart/: MultipartFormData.cpp
src/Protocols/HTTP/: Message.cpp  RadixRouter.cpp
